# instant-clip-tokenizer

./: Cargo.toml
instant-clip-tokenizer/: Cargo.toml
