[workspace]
members = ["instant-clip-tokenizer"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.65"
license = "MIT"
description = "Fast text tokenizer for the CLIP neural network"
homepage = "https://github.com/instant-labs/instant-clip-tokenizer"
repository = "https://github.com/instant-labs/instant-clip-tokenizer"
readme = "README.md"
